[tool.poetry]
name = "[nlp-server]"
version = "0.1.0"
description = ""
authors = ["tjcummings <cummings.tjc@gmail.com>"]
readme = "README.md"
packages = [{include = "[nlp_server]"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
